--- a/css/index.css
+++ b/css/index.css
@@ -6,6 +6,7 @@
 /* MAIN */
 .main-1{
     width:100%;
+    position:relative;
 }
 .main-1 img{
     width:100%;
@@ -15,17 +16,17 @@
     flex-direction: column;
     align-items: center;
     position: absolute;
-    top:50%; right:55%;
+    top:50%; right:52%;
     transform: translateY(-50%);
 }
 .main-2 div:nth-child(1){
-    font-size: 6em;
+    font-size: 6vw;
     font-weight: bold;
     letter-spacing: 0em;
     animation: m1 4s;
 }
 .main-2 div:nth-child(2){
-    font-size: 3em;
+    font-size: 3vw;
     letter-spacing: 0em;
     animation: m1 4s;
     color:rgba(126, 63, 12, 0.842);
