--- a/css/common.css
+++ b/css/common.css
@@ -36,10 +36,11 @@ a{text-decoration: none;}
 
 /* HEADER + dropdown */
 .header-1{
-    width:100%; height:80px;
+    width:100%;
+    height:80px;
 }
 .header-2{
-    width:100%; height:80px;
+    width:100%;
     position:fixed;
     background:white;
     z-index: 3;
@@ -56,7 +57,6 @@ a{text-decoration: none;}
     z-index: 3;
     border-bottom:1px solid lightgray;
 }
-
 .logo a{
     font-family: 'NEXON Lv1 Gothic OTF Bold';    /* logo */
     font-size:1.5em;
@@ -70,6 +70,26 @@ a{text-decoration: none;}
     font-family: 'NEXON Lv1 Gothic OTF Bold';
     font-size:1em;
     color:pink;
+}
+#burger{
+    display:none;
+}
+label[for="burger"] span{
+    display:none;
+}
+label[for="burger"]::before{
+    content:'';
+    display:block;
+    width: 25px;
+    height: 25px;
+    /* background: black; */
+    position: fixed;
+    top: 25px;
+    right: 5.5%;
+    background-image: url(../img/x.png);
+    background-position: center;
+    background-size: cover;
+    display:none;
 }
 
 .menu-1, .menu-2{
@@ -122,7 +142,11 @@ a{text-decoration: none;}
     left:50%; 
     bottom:-20px;
     transform: translate(-50%, 100%);
+    /* display:none; */
 }
+/* .menu-1 li:nth-child(2) a:hover + .dropdown1{
+    display: flex;
+} */
 .dropdown1 li, .dropdown2 li{
     margin: 0.3em;
 }
@@ -377,6 +401,7 @@ input:focus {
     align-items: center;
     z-index: 1;
     margin-top: 3em;
+
 }
 .sns-bt ul li{
     margin: 0.5em;    
@@ -400,7 +425,7 @@ footer{
     align-items: center;
     background:#dcdcdc;
     padding: 2rem;
-    height:200px;
+    /* height:200px; */
     text-align: center;
 }
 .footer1 span:nth-child(1){
@@ -412,4 +437,84 @@ footer{
 }
 .footer2{
     width: 80%;
+}
+
+
+
+@media( max-width: 1279px ){
+    .header-3, .footer2{
+        width:90%;
+    }
+}
+    
+@media( max-width: 991px ){
+    .menu-1 {
+
+    }
+    .menu-1>li{
+        margin: 0.7em;
+        text-align: center;
+    }
+
+}     
+
+@media( max-width: 767px ){
+    .header-2, .header-3{
+        height:350px;
+        /* transition:0.5s; */
+    }
+    .header-3{
+        flex-direction: column;
+        padding:1.5em 0;
+    }
+    .header-3 .logo{
+        align-self: flex-start;
+        display:flex;
+        justify-content: space-between;
+    }
+    
+    .menu-1{
+        flex-direction: column;
+        margin:1.5em 0;
+        width:100%;
+    }
+    .menu-1 li{
+        margin:1.5em;
+    }
+    .menu-2{
+        width:100%;
+        justify-content: space-around;
+
+        opacity:1;
+    }
+    .menu-2>li{
+        white-space:nowrap;
+    }
+    label[for="burger"]::before{
+        display: block;
+        z-index: 5;
+    }
+
+    #burger:checked + label[for="burger"]::before{
+        background-image:url(../img/burger.png);
+    }
+    #burger:checked ~ .header-2 .menu-1, #burger:checked ~ .header-2 .menu-2{
+        display:none;
+        
+    }
+    #burger:checked ~ .header-2, #burger:checked ~ .header-2 .header-3{
+        height: 80px;
+    }
+    .dropdown1, .dropdown2{
+        opacity:1;
+        flex-direction: row;
+        bottom:0px;
+        transform: translate(-50%, 65%);
+        background:rgba(255, 255, 255, 0);
+        justify-content: space-around;
+        white-space: nowrap;
+    }
+    .dropdown1>li:hover, .dropdown2>li:hover{
+        width:inherit;
+    }
 }
