--- a/css/qna.css
+++ b/css/qna.css
@@ -48,6 +48,7 @@
     text-align: left;
 }
 
+
 .notice-tb th{
     padding: 1em;
     border-top: 2px solid #d2d2d2;
@@ -56,6 +57,15 @@
 .notice-tb td{
     padding: 0.6em;
 }
+.notice-tb tr td{
+    border-bottom: 1px solid #d2d2d2;
+}
+.notice-tb tr:nth-child(3) td{
+    border-bottom: 0;
+}
+
+
+
 .answer td:nth-child(3){
     background-color: rgba(241, 241, 241, 0.925);
 }
@@ -97,4 +107,54 @@
     position:absolute;
     right:0;
     /* bottom:0.3em; */
+}
+
+td div{
+    color: gray;
+    font-size: 0.7em;
+    letter-spacing: -0.5px;
+    display: none;
+}
+
+@media( max-width: 1279px ){
+    .notice-tb,.undertable {
+        width: 90%;
+    }
+    th, td{
+        font-size:0.8em;
+    }
+    td>p{
+        font-size:1em;
+    }
+}
+    
+@media( max-width: 991px ){
+   
+}     
+
+@media( max-width: 767px ){
+    .notice-tb .notice-cap{
+        text-align: center;
+    }
+    th:nth-child(1), th:nth-child(6), th:nth-child(4), th:nth-child(5),
+    td:nth-child(1), td:nth-child(6), td:nth-child(4), td:nth-child(5){
+        display:none;
+    }
+    th:nth-child(1),td:nth-child(1){
+        padding:0;
+        width:5px;
+    }
+    td div{
+        display: block;
+        margin:0.7em;
+    }
+
+    .category-search{
+        margin-left:auto;
+        position: absolute;
+        height: 1em;
+        right:calc( 50% - 90px );
+        top:5em;
+    }
+
 }
