--- a/css/notice.css
+++ b/css/notice.css
@@ -38,10 +38,7 @@
     width:10%;
     min-width:130px;
 }
-.notice-tb tr th:nth-child(5){
-    width:5%;
-    min-width:70px;
-}
+
 
 .notice-tb th{
     padding: 1em;
@@ -108,10 +105,7 @@ td div{
         width:5%;
         min-width:50px;
     }
-    .notice-tb tr th:nth-child(5){
-        width:5%;
-        /* min-width:50px; */
-    }
+
 }
     
 @media( max-width: 991px ){
@@ -122,8 +116,8 @@ td div{
     .notice-tb .notice-cap{
         text-align: center;
     }
-    th:nth-child(1), th:nth-child(3), th:nth-child(4), th:nth-child(5),
-    td:nth-child(1), td:nth-child(3), td:nth-child(4), td:nth-child(5){
+    th:nth-child(1), th:nth-child(3), th:nth-child(4),
+    td:nth-child(1), td:nth-child(3), td:nth-child(4){
         display:none;
     }
     th:nth-child(1),td:nth-child(1){
