--- a/css/community.css
+++ b/css/community.css
@@ -2,14 +2,14 @@
 @import url('common.css');
 
 
-.notice-tb {
-    margin: 0 auto;
+.board-tb {
+    margin: 120px auto;
     text-align: center;
     width: 80%;
     border-bottom: 2px solid #d2d2d2;
     border-collapse: collapse;
 }
-.notice-tb .notice-cap{
+.board-tb .board-cap{
     text-align: left;
     font-size: 2em;
     font-weight: bold;
@@ -18,73 +18,69 @@
     letter-spacing: -0.05em;
     
 }
-.notice-tb .notice-cap2{
-    margin-bottom: 1em;
-}
-.notice-tb tr th:nth-child(1){
+.board-tb tr th:nth-child(1){
     width:5%;
     min-width:70px;
 }
-.notice-tb tr th:nth-child(2){
-}
-.notice-tb tr td:nth-child(2){
+.board-tb tr td:nth-child(2){
     text-align: left;
 }
-.notice-tb tr th:nth-child(3){
+.board-tb tr th:nth-child(3){
     width:8%;
     min-width:80px;
 }
-.notice-tb tr th:nth-child(4){
+.board-tb tr th:nth-child(4){
     width:10%;
-    min-width:120px;
+    min-width:130px;
 }
-.notice-tb th{
+.board-tb th{
     padding: 1em;
     border-top: 2px solid #d2d2d2;
     border-bottom: 2px solid #d2d2d2;
+    white-space: nowrap;
 }
-.notice-tb td{
+.board-tb td{
     padding: 0.6em;
     border-bottom: 1px solid #d2d2d2;
 }
 
 /* 사진 */
-.review-content{
+.board-content{
     display: flex;
     align-items: flex-start;
 }
-.review-pt.active{
-    width:10em; height: 10em;
-}
-.review-pt{
+.board-pt{
     width:3em; height: 3em;
     background:lightgray;
-    background-image: url(../img/special1.jpg);
+    /* background-image: url(../img/special1.jpg); */
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
     margin:0 1em;
     flex-shrink: 0;
 }
-.review-star{
+.board-pt.active{
+    width:10em; height: 10em;
+}
+.board-star{
     width:5.4em; height: 1em;
     background-image: url(../img/star.png);
     background-size: contain;
-    /* background-repeat: no-repeat; */
+
     background-position: center; 
 }
-.review-title.active{
-    font-weight: bold;
-}
-.review-title{
+.board-title{
     margin: 0.3em 0;
 }
-.review-comment{
+div.active .board-title{
+    font-weight: bold;
+}
+.board-comment{
     background-color: rgba(241, 241, 241, 0.925);
     padding: 1em;
     display: none;
 }
-.review-comment.active{
+div.active .board-comment{
     display: block;
 }
 .undertable{
@@ -115,7 +111,7 @@ td>div>div:nth-child(1){
     display: none;
 }
 @media( max-width: 1279px ){
-    .notice-tb,.undertable {
+    .board-tb,.undertable {
         width: 90%;
     }
     th, td, td>div>div{
@@ -124,10 +120,10 @@ td>div>div:nth-child(1){
     td:nth-child(4){
         white-space: nowrap;
     }
-    .notice-tb tr th:nth-child(3){
+    .board-tb tr th:nth-child(3){
         width:5%;
     }
-    .notice-tb tr th:nth-child(4){
+    .board-tb tr th:nth-child(4){
         width:5%;
         min-width:50px;
     }
@@ -136,10 +132,10 @@ td>div>div:nth-child(1){
    
 }     
 @media( max-width: 767px ){
-    .review-content{
+    .board-content{
         flex-direction: column;
     }
-    .notice-tb .notice-cap{
+    .board-tb .board-cap{
         text-align: center;
     }
     td>div>div:nth-child(1){
@@ -158,7 +154,7 @@ td>div>div:nth-child(1){
         display: block;
         margin:0.7em;
     }
-    .review-comment{
+    .board-comment{
         margin:0;
     }
     .category-search{
